fix some spacing issues on homepage and began css for fresh-chef page

--- a/sass/theme/style.scss
+++ b/sass/theme/style.scss
@@ -15,7 +15,7 @@ html, body {
 
 body {
   font-family: "Montserrat", Helvetica, Arial, sans-serif;
-  color: #FFFFFF;
+  /*color: #FFFFFF;*/
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -23,18 +23,26 @@ h1, h2, h3, h4, h5, h6 {
   text-align: center;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 p {
+  font-family: "Georgia", Palatino Linotype, Times New Roman, serif;
   font-size: 16px;
-  max-width: 485px;
-  text-align: center;
-  letter-spacing: .02em;
-  line-height: 1.4285;
+  max-width: 657px;
+  text-align: left;
+  letter-spacing: 0.17px;
+  line-height: 30px;
   margin: 0 auto;
 }
 
 .title {
   font-size: 29px;
   font-weight: 700;
+  color: #FFFFFF;
+  margin-bottom: 25px;
 
   @media (min-width: 411px){
     font-size: 32px;
@@ -53,7 +61,9 @@ p {
 .project_type {
   font-size: 18px;
   font-weight: 400;
-  margin-top: -15px; 
+  margin-top: -15px;
+  margin-bottom: 15px; 
+  color: #FFFFFF;
 
   @media (min-width: 411px){
     font-size: 20px;
@@ -145,6 +155,7 @@ padding: 15px 40px;
   display: block;
   padding-top: 20px;
   font-size: 13px;
+  color: #FFFFFF;
   opacity: 0.8;
 
   @media (min-width: 750px){
@@ -267,6 +278,7 @@ padding: 15px 40px;
   background-size: cover;
   min-height: 485px;
   text-align: center;
+  padding-bottom: 40px;
 
   @media (min-width: 360px){
     min-height: 525px;
@@ -306,6 +318,7 @@ padding: 15px 40px;
   background-size: cover;
   min-height: 497px;
   text-align: center;
+  padding-bottom: 40px;
 
   @media (min-width: 360px){
     min-height: 525px;
@@ -377,7 +390,9 @@ padding: 15px 40px;
 .intro {
   font-size: 20px;
   font-weight: 700;
+  font-family: "Montserrat", Helvetica, Arial, sans-serif;
   color: #000000;
+  text-align: center;
 }
 
 .intro_text {
@@ -385,14 +400,17 @@ padding: 15px 40px;
   font-weight: normal;
   color: #000000;
   font-size: 16px;
+  text-align: center;
   letter-spacing: 0.17px;
   line-height: 30px;
   margin-top: 20px;
+  max-width: 485px;
 }
 
 .textlink {
   font-weight: bold;
   text-decoration: none;
+  color: #0031FF;
 }
 
 .textlink:hover {
@@ -449,11 +467,30 @@ padding: 15px 40px;
 
 /* =========== CASE STUDY - Fresh Chef ============ */
 
+/* STANDARD STYLES - Fresh Chef */
+
+.project_header, .project_footer {
+  font-weight: 700;
+  font-size: 14px; 
+  color: #FFFFFF;
+  background-image: url("../../images/images-fresh_chef/header_footer_background2x.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.project_title h2{
+  font-weight: 700;
+  font-size: 40px;
+}
 
 
-
-
-
+/* GENERAL MEDIA QUERY - MAX WIDTH */
+.wrapper1 {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 657px;
+  padding: 0 20px;
+}
 
 
 
